<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/inputcity"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250sp"
        android:hint="@string/hint"
        android:minHeight="48sp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonfind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Узнать погоду"
        android:layout_below="@+id/inputcity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonfind"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="50sp"
        android:layout_marginRight="50sp"
        android:layout_marginBottom="50sp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8sp">

            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/temperature"
                android:gravity="center"
                android:padding="8sp"
                android:background="#FFE0E0E0" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8sp"
                android:background="#FFE0E0E0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8sp">

            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/humid"
                android:gravity="center"
                android:padding="8sp"
                android:background="#FFE0E0E0" />

            <TextView
                android:id="@+id/humid"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/no_data"
                android:gravity="center"
                android:padding="8sp"
                android:background="#FFE0E0E0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8sp">

            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/windspeed"
                android:gravity="center"
                android:padding="8sp"
                android:background="#FFE0E0E0" />

            <TextView
                android:id="@+id/windspeed"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/no_data"
                android:gravity="center"
                android:padding="8sp"
                android:background="#FFE0E0E0" />
        </TableRow>

    </TableLayout>


</RelativeLayout>